deployment/kubernetes/client-registration-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-registration-api
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: client-registration-api
  template:
    metadata:
      labels:
        app: client-registration-api
#      annotations:
#        prometheus.io/scrape: "true"
#        prometheus.io/port: "8080"
#        prometheus.io/path: "/metrics"
    spec:
      containers:
        - image: ghcr.io/openearthplatforminitiative/client-registration-api:latest
          name: client-registration-api
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: client-registration-api
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: auth
      port: 4181
      targetPort: 4181
  selector:
    app: client-registration-api
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stripprefix-client-registration
spec:
  stripPrefix:
    prefixes:
      - /client-registration
    forceSlash: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: client-registration-auth
spec:
  forwardAuth:
    address: http://client-registration-api.apps.svc.cluster.local:4181
    trustForwardHeader: true
    authResponseHeaders:
        - X-Forwarded-User
        - X-Auth-Request-Access-Token
        - X-Auth-Request-Email
        - X-Auth-Request-User
        - X-Auth-Request-Username
        - X-Auth-Request-Preferred-Username
        - Authorization
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: client-registration-api
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: PathPrefix(`/client-registration`) && !PathPrefix(`/client-registration/metrics`)
    services:
    - kind: Service
      name: client-registration-api
      port: 80
    middlewares:
    - name: client-registration-auth
    - name: stripprefix-client-registration
  - kind: Rule
    match: PathPrefix(`/oauth2`) && !PathPrefix(`/oauth2/metrics`)
    services:
    - kind: Service
      name: client-registration-api
      port: 4181

#---
#apiVersion: traefik.io/v1alpha1
#kind: IngressRoute
#metadata:
#  name: client-registration-auth
#spec:
#  entryPoints:
#    - websecure
#  routes:
#    - kind: Rule
#      match: PathPrefix(`/oauth2`) && !PathPrefix(`/oauth2/metrics`)
#      services:
#        - kind: Service
#          name: client-registration-api
#          port: 4181
